# yxa

./: .gitignore  Makefile.in  README  configure.ac
doc-src/: sipserver_sup.edoc  sipsocket.edoc  supervision.graffle
src/: Makefile.in  appserver.app-in  appserver.rel-in  autotest.erl  bootstrap.erl  incomingproxy.app-in  incomingproxy.erl  incomingproxy.rel-in  outgoingproxy.app-in  outgoingproxy.rel-in  pstnproxy.app-in  pstnproxy.rel-in  sipserver.erl  sipserver_sup.erl  start_ssl.rel-in  yxa.app-in  yxa_ctl.erl
src/database/: table_update.erl
src/event/: Makefile.in  active_subscriber.erl  eventserver.app-in  eventserver.erl  eventserver.rel-in  subscription.erl
src/transportlayer/: Makefile.in  sipsocket.erl  ssl_util.erl  transportlayer.erl
